Add rough docs and Makefile
The Makefile automates some things and makes it easier to run tasks
in the docker environment.

This also fleshes out some of the docs with auto-generated apidocs
and some bits about testing the app.

--- a/.gitignore
+++ b/.gitignore
@@ -52,8 +52,11 @@ coverage.xml
 # Django stuff:
 *.log
 
-# Sphinx documentation
+# Sphinx-generated things
 docs/_build/
+docs/antenna.rst
+docs/modules.rst
 
 # PyBuilder
 target/
+
