Add install step to .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,5 @@ cache:
   directories:
     - pip_cache
 
+install: pip install -r requirements.txt requirements-dev.txt
 script: bin/travis/test_dispatch.sh $TEST_SUITE
