--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ env:
   global:
     - PIP_DOWNLOAD_CACHE="pip_cache"
   matrix:
-    - TEST_SUITE=lint
-    - TEST_SUITE=tests
+    - TEST_SUITE="lint"
+    - TEST_SUITE="tests"
 
 cache:
   directories:
