--- a/setup.cfg
+++ b/setup.cfg
@@ -12,3 +12,12 @@ universal = 1
 
 [flake8]
 exclude = docs
+
+
+[pytest]
+addopts=-rsxX --tb=native
+norecursedirs=.git docs bin
+testpaths = tests
+
+env=
+    D:ANTENNA_INI=settings_test.ini
