Fix travis tests
Travis uses pip 6 and so it doesn't jive with the hashes requirement.
This redoes things so that we move the test passes into tox as tox
environments rather than doing them in travis with the dispatch script.
This lets us more easily update pip and things like that and get a
better set of test runs.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,16 @@
 # Config file for automatic testing at travis-ci.org
 # This file will be regenerated if you run travis_pypi_setup.py
 
-sudo: no
+sudo: false
 language: python
 python: 2.7
 
+install:
+  - pip install tox
+
 env:
-  global:
-    - PIP_DOWNLOAD_CACHE="pip_cache"
-  matrix:
-    - TEST_SUITE="lint"
-    - TEST_SUITE="tests"
+  - TOX_ENV=flake8
+  - TOX_ENV=tests
 
-cache:
-  directories:
-    - pip_cache
-
-install: pip install -r requirements.txt -r requirements-dev.txt
-script: bin/travis/test_dispatch.sh $TEST_SUITE
+script:
+  - tox -e $TOX_ENV
