Fix docker infrastructure
This fixes the Dockerfile to bind to 0.0.0.0:8000 because that makes
things work. This updates the Makefile and docker-compose.yml so we
can launch Antenna for development purposes.

--- a/.gitignore
+++ b/.gitignore
@@ -41,12 +41,6 @@ htmlcov/
 coverage.xml
 *,cover
 .hypothesis/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
 *.log
 
 # Sphinx-generated things
@@ -54,3 +48,6 @@ docs/_build/
 
 # PyBuilder
 target/
+
+# Docker things
+.docker-build
