--- a/circle.yml
+++ b/circle.yml
@@ -31,11 +31,9 @@ dependencies:
 test:
   pre:
     - chmod -R 777 $CIRCLE_TEST_REPORTS
-    - pip install tox
   override:
-    # Run Python tests
-    - tox -e flake8
-    - tox -e tests
+    - py.test
+    - flake8
 
 # appropriately tag and push the container to dockerhub
 deployment:
