--- a/circle.yml
+++ b/circle.yml
@@ -31,7 +31,7 @@ dependencies:
 test:
   pre:
     - chmod -R 777 $CIRCLE_TEST_REPORTS
-    - pip install -r requirements.txt -r requirements-dev.txt
+    - pip install -r requirements-dev.txt
   override:
     - py.test
     - flake8
