--- a/circle.yml
+++ b/circle.yml
@@ -1,10 +1,14 @@
 machine:
+  environment:
+    DOCKER_CACHE_FILE: /home/ubuntu/docker/cache.tar.gz
   services:
     - docker
 
 dependencies:
   cache_directories:
-    - "~/cache/"
+    - "~/docker"
+  pre:
+    - if [ -f ${DOCKER_CACHE_FILE} ]; then gunzip -c ${DOCKER_CACHE_FILE} | docker load; fi
   override:
     # create a version.json per https://github.com/mozilla-services/Dockerflow/blob/master/docs/version_object.md
     - >
@@ -16,18 +20,13 @@ dependencies:
         "$CIRCLE_BUILD_URL" > version.json
     - cp version.json $CIRCLE_ARTIFACTS
     - docker info
-    # use circleci's docker cache workaround
-    - mkdir -p ~/cache/
-    - if [ -e ~/cache/docker/image.tar ]; then echo "Loading image.tar"; docker load -i ~/cache/docker/image.tar || rm ~/cache/docker/image.tar; fi
-    # build image
-    - docker build -t antenna:build .
-    # Clean up old image and save the new one
-    - >
-      mkdir -p ~/cache/docker;
-      rm -f ~/cache/docker/image.tar;
-      docker save antenna:build > ~/cache/docker/image.tar;
-      ls -l ~/cache/docker
 
+    # build image
+    - docker build -t antenna:build --pull=true .
+
+    # caching per https://giorgos.sealabs.net/docker-cache-on-travis-and-docker-112.html
+    # - if [[ ${CIRCLE_BRANCH} == "master" ]]; then mkdir -p $(dirname ${DOCKER_CACHE_FILE}) ; docker save $(docker history -q antenna:build | grep -v '<missing>') | gzip > ${DOCKER_CACHE_FILE}; fi
+    - mkdir -p $(dirname ${DOCKER_CACHE_FILE}) ; docker save $(docker history -q antenna:build | grep -v '<missing>') | gzip > ${DOCKER_CACHE_FILE}
 test:
   pre:
     - chmod -R 777 $CIRCLE_TEST_REPORTS
