--- a/circle.yml
+++ b/circle.yml
@@ -32,8 +32,8 @@ test:
   pre:
     - chmod -R 777 $CIRCLE_TEST_REPORTS
   override:
-    - py.test
-    - flake8
+    - docker run antenna:build py.test
+    - docker run antenna:build flake8
 
 # appropriately tag and push the container to dockerhub
 deployment:
