Move tests to tests/unittest/ with README

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,7 +18,7 @@ exclude = docs
 [pytest]
 addopts = -rsxX --tb=native
 norecursedirs = .git docs bin
-testpaths = tests
+testpaths = tests/unittest/
 
 env=
     D:ANTENNA_INI=settings_test.ini
