--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -3,8 +3,14 @@ FROM local/antenna_deploy_base
 # Switch to root to install stuff
 USER root
 
-# Install build essentials which includes make
-RUN apt-get install -y build-essential
+# Install build essentials which includes make which we need for docs
+# and also vim for easier debugging/editing in the container
+RUN apt-get install -y \
+    build-essential \
+    vim
+
+# Give the root a password for easier development
+RUN echo "root:docker" | chpasswd
 
 # Switch back to app user
 USER app
