--- a/prod.env
+++ b/prod.env
@@ -1,5 +1,6 @@
-CRASHSTORAGE_CLASS=antenna.external.s3.crashstorage.S3CrashStorage
+# Usage: ANTENNA_ENV=prod.env make run
 S3_ACCESS_KEY=fakes3
 S3_SECRET_ACCESS_KEY=whatever
-BUCKET_NAME=org.mozilla.crash-stats.prod
-ENDPOINT_URL=http://fakes3:4569
+CRASHSTORAGE_CLASS=antenna.external.s3.crashstorage.S3CrashStorage
+CRASHSTORAGE_BUCKET_NAME=org.fakes3.prod
+CRASHSTORAGE_ENDPOINT_URL=http://fakes3:4569
