--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,7 @@ universal = 1
 ignore = E501
 exclude = docs
 
-[pytest]
+[tool:pytest]
 addopts = -rsxX --tb=native
 norecursedirs = .git docs bin
 testpaths = tests/unittest/
