--- a/prod.env
+++ b/prod.env
@@ -1,6 +1,12 @@
-# Usage: ANTENNA_ENV=prod.env make run
-S3_ACCESS_KEY=fakes3
-S3_SECRET_ACCESS_KEY=whatever
+# prod-like Antenna environment with fakes3.
+#
+# See https://antenna.readthedocs.io/ for documentation.
+
+# BreakdpadSubmitterResource settings
 CRASHSTORAGE_CLASS=antenna.external.s3.crashstorage.S3CrashStorage
-CRASHSTORAGE_BUCKET_NAME=org.fakes3.prod
+
+# S3CrashStorage and S3Connection settings
 CRASHSTORAGE_ENDPOINT_URL=http://fakes3:4569
+CRASHSTORAGE_ACCESS_KEY=fakes3
+CRASHSTORAGE_SECRET_ACCESS_KEY=whatever
+CRASHSTORAGE_BUCKET_NAME=org.fakes3.prod
