Fix logging and logging mock
This adds a configurable logging level to setup_logging and the app
configuration.

This also fixes the logging mock and py.test fixture to work better
especially in regards to how setup_logging() only happens once.

--- a/prod.env
+++ b/prod.env
@@ -2,6 +2,9 @@
 #
 # See https://antenna.readthedocs.io/ for documentation.
 
+# DEBUG is helpful for development, but otherwise we'd use INFO
+LOGGING_LEVEL=DEBUG
+
 # BreakdpadSubmitterResource settings
 CRASHSTORAGE_CLASS=antenna.external.s3.crashstorage.S3CrashStorage
 
