Implement metrics infrastructure
This implements infrastructure for metrics. It's global to the entire
app to make it easier to add metrics easily without having to add
additional tangling between things. The theory is that metrics is like
logging where it's available to the entire app because we always want
it.

This adds a LoggingMetrics and a DogStatsdMetrics. The former makes
development a little easier in some circumstances. The latter we'll
use in production.

This adds testing infrastructure to make it easy to verify specific
metrics are generated during execution of bits of code.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,7 @@ services:
     command: ./bin/run_web.sh
     links:
       - fakes3
+      - statsd
 
   # fakes3 service
   # https://hub.docker.com/r/lphoward/fake-s3/
@@ -49,3 +50,13 @@ services:
       - "4569:4569"
     volumes:
       - ./fakes3_root:/fakes3_root
+
+  statsd:
+    # https://hub.docker.com/r/hopsoft/graphite-statsd/
+    image: hopsoft/graphite-statsd
+    ports:
+      - "9000:80"
+      - "2003-2004:2003-2004"
+      - "2023-2024:2023-2024"
+      - "8125:8125/udp"
+      - "8126:8126"
