--- a/prod.env
+++ b/prod.env
@@ -5,6 +5,12 @@
 # DEBUG is helpful for development, but otherwise we'd use INFO
 LOGGING_LEVEL=DEBUG
 
+# Statsd things
+METRICS_CLASS=antenna.metrics.DogStatsdMetrics
+STATSD_HOST=statsd
+STATSD_PORT=8125
+STATSD_NAMESPACE=mcboatface
+
 # BreakdpadSubmitterResource settings
 CRASHSTORAGE_CLASS=antenna.external.s3.crashstorage.S3CrashStorage
 
