Bug 1323464: Implement system test script
* implements a system test script so this is easier to run in a docker
  container in the -dev environment
* renames prod.env to dev.env which is more appropriate
* updates documentation
* cleans up some oddities

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,7 @@ services:
     environment:
       - ANTENNA_ENV=${ANTENNA_ENV}
       - POSTURL=http://web:8000/submit
-      - SKIP20=true
+      - NONGINX=1
     links:
       - web
 
