--- a/tests/systemtest/requirements.txt
+++ b/tests/systemtest/requirements.txt
@@ -41,3 +41,5 @@ six==1.10.0 \
 everett==0.6 \
     --hash=sha256:52848a30c302cd92fff98f1afb1b2ff4f5d7decf88404240c0009d90ce54867b \
     --hash=sha256:9cce5d4d009eea4d32d1a313d1cf2a563ce2eba7ec709ec9faf8e62e108c6bba
+configobj==5.0.6 \
+    --hash=sha256:a2f5650770e1c87fb335af19a9b7eb73fc05ccf22144eb68db7d00cd2bcb0902
