Fix test-coverage and clean rules
This fixes the test-coverage rule so that it works correctly. It now spits out
test coverage information and missing lines to stdout.

This fixes the clean rule so that it works with fakes3 correctly.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,8 @@ services:
   # and building docs.
   base:
     image: local/antenna_dev
+    environment:
+      - COVERAGE_FILE=/tmp/.coverage
     volumes:
       - .:/app
 
