--- a/circle.yml
+++ b/circle.yml
@@ -43,6 +43,7 @@ deployment:
       # set DOCKER_DEPLOY=true in Circle UI to do deploys
       - "${DOCKER_DEPLOY:-false}"
       - bin/ci/deploy-dockerhub.sh latest
+      - bin/ci/deploy-dockerhub.sh "$CIRCLE_BUILD_NUM"
 
   tags:
     # push all tags
