Bug 1351914: Switch to moto for fake s3
This switches from fake s3 to moto. This solves several problems the biggest of
which being that they no longer distribute fakes3 under and Open Source license.

The other problem this solves is that fakes3 doesn't let you list buckets which
we now need.

This uses a specific commit in the master branch after release 0.4.31 because
that release has bugs that prevent us from creating buckets.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ services:
       - "8000:8000"
     command: ./bin/run_web.sh
     links:
-      - fakes3
+      - moto-s3
       - statsd
 
   # System test container
@@ -55,14 +55,13 @@ services:
     links:
       - web
 
-  # fakes3 service
-  # https://hub.docker.com/r/lphoward/fake-s3/
-  fakes3:
-    image: lphoward/fake-s3
+  moto-s3:
+    build:
+      context: .
+      dockerfile: Dockerfile.motos3
+    command: s3 -H 0.0.0.0 -p5000
     ports:
-      - "4569:4569"
-    volumes:
-      - ./fakes3_root:/fakes3_root
+      - "5000:5000"
 
   statsd:
     # https://hub.docker.com/r/kamon/grafana_graphite/
