--- a/dev.env
+++ b/dev.env
@@ -1,4 +1,4 @@
-# prod-like Antenna environment with fakes3.
+# prod-like Antenna environment with moto-s3.
 #
 # See https://antenna.readthedocs.io/ for documentation.
 
@@ -14,7 +14,8 @@ STATSD_NAMESPACE=mcboatface
 CRASHSTORAGE_CLASS=antenna.ext.s3.crashstorage.S3CrashStorage
 
 # S3CrashStorage and S3Connection settings
-CRASHSTORAGE_ENDPOINT_URL=http://fakes3:4569
-CRASHSTORAGE_ACCESS_KEY=fakes3
-CRASHSTORAGE_SECRET_ACCESS_KEY=whatever
-CRASHSTORAGE_BUCKET_NAME=org.fakes3.prod
+CRASHSTORAGE_ENDPOINT_URL=http://moto-s3:5000
+CRASHSTORAGE_REGION=us-east-1
+CRASHSTORAGE_ACCESS_KEY=foo
+CRASHSTORAGE_SECRET_ACCESS_KEY=foo
+CRASHSTORAGE_BUCKET_NAME=antennabucket
