Add doc8 configuration
I don't want to add doc8 to the tooling because it's not that big a deal, but
adding this configuration simplifies using it.

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,3 +19,7 @@ exclude = docs
 addopts = -rsxX --tb=native
 norecursedirs = .git docs bin
 testpaths = tests/unittest/
+
+[doc8]
+max-line-length = 80
+ignore-path = docs/_build/
