Docs update: architecture and troubleshooting
This adds architecture and troubleshooting chapters to the docs.

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -7,7 +7,8 @@ USER root
 # and also vim for easier debugging/editing in the container
 RUN apt-get install -y \
     build-essential \
-    vim
+    vim \
+    graphviz
 
 # Give the root a password for easier development
 RUN echo "root:docker" | chpasswd
