Bug 1357944: Switch to markus for metrics
This swaps out the metrics infrastructure for Markus.

--- a/dev.env
+++ b/dev.env
@@ -6,7 +6,7 @@
 LOGGING_LEVEL=DEBUG
 
 # Statsd things
-METRICS_CLASS=antenna.metrics.DogStatsdMetrics
+METRICS_CLASS=antenna.metrics.LoggingMetrics,antenna.metrics.DogStatsdMetrics
 STATSD_HOST=statsd
 STATSD_NAMESPACE=mcboatface
 
