Switch from a statsd/graphite to a statsd/graphite/grafana container
Grafana has better graphing, so this will make local development easier.

This also adds some bits to the README for setting it up. When doing that, I
broke up the running section into smaller parts.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,11 +65,8 @@ services:
       - ./fakes3_root:/fakes3_root
 
   statsd:
-    # https://hub.docker.com/r/hopsoft/graphite-statsd/
-    image: hopsoft/graphite-statsd
+    # https://hub.docker.com/r/kamon/grafana_graphite/
+    # username: admin, password: admin
+    image: kamon/grafana_graphite
     ports:
-      - "9000:80"
-      - "2003-2004:2003-2004"
-      - "2023-2024:2023-2024"
-      - "8125:8125/udp"
-      - "8126:8126"
+      - "9000:3000"  # grafana port
