--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,6 +55,7 @@ services:
     links:
       - web
 
+  # moto-server running a fake S3
   moto-s3:
     build:
       context: .
@@ -63,9 +64,9 @@ services:
     ports:
       - "5000:5000"
 
+  # https://hub.docker.com/r/kamon/grafana_graphite/
+  # username: admin, password: admin
   statsd:
-    # https://hub.docker.com/r/kamon/grafana_graphite/
-    # username: admin, password: admin
     image: kamon/grafana_graphite
     ports:
       - "9000:3000"  # grafana port
