Switch to localstack
This switches from the moto container I was using to localstack which is
essentially the same thing, but maintained a little better and I don't have to
maintain my own Dockerfile.

--- a/dev.env
+++ b/dev.env
@@ -1,4 +1,4 @@
-# prod-like Antenna environment with moto-s3.
+# prod-like Antenna environment with localstack-s3.
 #
 # See https://antenna.readthedocs.io/ for documentation.
 
@@ -14,7 +14,7 @@ STATSD_NAMESPACE=mcboatface
 CRASHSTORAGE_CLASS=antenna.ext.s3.crashstorage.S3CrashStorage
 
 # S3CrashStorage and S3Connection settings
-CRASHSTORAGE_ENDPOINT_URL=http://moto-s3:5000
+CRASHSTORAGE_ENDPOINT_URL=http://localstack-s3:5000
 CRASHSTORAGE_REGION=us-east-1
 CRASHSTORAGE_ACCESS_KEY=foo
 CRASHSTORAGE_SECRET_ACCESS_KEY=foo
