pyup: s/updates/update/g in per requirements.txt files

--- a/.pyup.yml
+++ b/.pyup.yml
@@ -3,6 +3,6 @@ search: False
 update: insecure
 requirements:
   - requirements.txt:
-      updates: security
+      update: security
   - requirements-newrelic.txt:
-      updates: security
+      update: security
