fixes bug 1436176 - update localstack image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,10 +55,10 @@ services:
     links:
       - web
 
-  # https://hub.docker.com/r/atlassianlabs/localstack/
+  # https://hub.docker.com/r/localstack/localstack/
   # localstack running a fake S3
   localstack-s3:
-    image: atlassianlabs/localstack:0.4.0
+    image: localstack/localstack:0.8.4
     environment:
       - SERVICES=s3:5000
       - DEFAULT_REGION=us-east-1
