--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,13 +11,6 @@ services:
       dockerfile: Dockerfile
     image: local/antenna_deploy_base
 
-  # This builds an image that extends Dockerfile with dev-related things.
-  dev-base:
-    build:
-      context: .
-      dockerfile: Dockerfile.dev
-    image: local/antenna_dev
-
   # ------------------------------------------------------------------
   # After this point is dev-related services.
   # ------------------------------------------------------------------
@@ -25,7 +18,7 @@ services:
   # Base container is used for development tasks like tests, linting, coverage
   # and building docs.
   base:
-    image: local/antenna_dev
+    image: local/antenna_deploy_base
     environment:
       - COVERAGE_FILE=/tmp/.coverage
     volumes:
