Split requirements into default and constraints
This splits the requirements into the dependencies that Antenna has and
then all the dependencies of those dependencies. This makes it easier to
maintain a minimal list of installed libraries.

--- a/.pyup.yml
+++ b/.pyup.yml
@@ -2,7 +2,7 @@ schedule: "every day"
 search: False
 update: insecure
 requirements:
-  - requirements.txt:
+  - requirements/default.txt:
       update: security
-  - requirements-newrelic.txt:
+  - requirements/constraints.txt:
       update: security
