fix bug 1517780: update dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,8 @@ universal = 1
 
 [flake8]
 # E501: line too long
-ignore = E501
+# W504: line break after binary operator
+ignore = E501,W504
 exclude = docs
 
 [tool:pytest]
