bug 1527343: implement pubsub publishing

--- a/docker/config/local_dev.env
+++ b/docker/config/local_dev.env
@@ -15,6 +15,7 @@ STATSD_NAMESPACE=mcboatface
 
 # BreakdpadSubmitterResource settings
 CRASHSTORAGE_CLASS=antenna.ext.s3.crashstorage.S3CrashStorage
+CRASHPUBLISH_CLASS=antenna.ext.pubsub.crashpublish.PubSubCrashPublish
 
 # S3CrashStorage and S3Connection settings
 CRASHSTORAGE_ENDPOINT_URL=http://localstack-s3:5000
@@ -22,3 +23,11 @@ CRASHSTORAGE_REGION=us-east-1
 CRASHSTORAGE_ACCESS_KEY=foo
 CRASHSTORAGE_SECRET_ACCESS_KEY=foo
 CRASHSTORAGE_BUCKET_NAME=antennabucket
+
+# Pub/Sub things for local development
+CRASHPUBLISH_PROJECT_ID=socorro
+CRASHPUBLISH_TOPIC_NAME=local_dev_socorro_normal
+CRASHPUBLISH_SUBSCRIPTION_NAME=pubsub-cli
+
+# Set Pub/Sub library to use emulator
+PUBSUB_EMULATOR_HOST=pubsub:5010
