fix bug 1527919: use console logging in a local dev environment
This fixes logging so it uses mozlog in a server environment and console
in a local dev environment. This makes logs muuuuuch easier to read
when working on things.

--- a/dev.env
+++ b/dev.env
@@ -2,6 +2,9 @@
 #
 # See https://antenna.readthedocs.io/ for documentation.
 
+# This marks this as a local development environment
+LOCAL_DEV_ENV=True
+
 # DEBUG is helpful for development, but otherwise we'd use INFO
 LOGGING_LEVEL=DEBUG
 
