Fix pydocstyle lint issues
This fixes issues raised by flake8-docstrings which uses pydocstyle. I
didn't add it to the "make lint" pass because I'm on the fence about whether
to enforce it for everyone. However, it did make sense to run it once
and fix any issues and thus improve the docs.

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,9 +2,17 @@
 universal = 1
 
 [flake8]
-# E501: line too long
-# W504: line break after binary operator
-ignore = E501,W504
+ignore =
+    # E501: line too long
+    E501,
+    # W504: line break after binary operator
+    W504,
+    # D100: Missing docstring in public module (pydocstyle)
+    D100,
+    # D104: Missing docstring in public package (pydocstyle)
+    D104,
+    # D107: Missing docstring in __init__ (pydocstyle)
+    D107
 exclude = docs
 
 [tool:pytest]
