bug 1531865: redo scaffolding to match Socorro
This redoes Antenna configuration and scaffolding to match how Socorro
works.

This eliminates the need for prefacing things with ANTENNA_ENV=xyx.env which
simplifies command lines and examples.

This moves the dev.env thing into a docker/config/local_dev.env since that's
what people are likely to be using in a local dev environment.

This adds a my.env override file for handling overriding variables in the
Makefile as well as in the app.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,8 +28,9 @@ services:
   web:
     extends:
       service: base
-    environment:
-      - ANTENNA_ENV=${ANTENNA_ENV}
+    env_file:
+      - docker/config/local_dev.env
+      - my.env
     ports:
       - "8000:8000"
     command: ./bin/run_web.sh
@@ -41,8 +42,10 @@ services:
   systemtest:
     extends:
       service: base
+    env_file:
+      - docker/config/local_dev.env
+      - my.env
     environment:
-      - ANTENNA_ENV=${ANTENNA_ENV}
       - POSTURL=http://web:8000/submit
       - NONGINX=1
     links:
