--- a/docker/Dockerfile.pubsub
+++ b/docker/Dockerfile.pubsub
@@ -5,7 +5,7 @@ RUN apk --update add openjdk8-jre
 RUN gcloud components install pubsub-emulator beta --quiet
 
 # Copy the run script
-COPY run_pubsub.sh /tmp
+COPY docker/run_pubsub.sh /tmp
 
 EXPOSE 5010
 
