bug 1527343: switch to use CRASHPUBLISH_SERVICE_ACCOUNT_FILE

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -35,6 +35,7 @@ EXPOSE $PORT
 
 CMD $CMD_PREFIX \
     gunicorn \
+    --preload \
     --workers=$GUNICORN_WORKERS \
     --worker-connections=$GUNICORN_WORKER_CONNECTIONS \
     --worker-class=$GUNICORN_WORKER_CLASS \
