--- a/docker/config/local_dev.env
+++ b/docker/config/local_dev.env
@@ -25,6 +25,7 @@ CRASHSTORAGE_SECRET_ACCESS_KEY=foo
 CRASHSTORAGE_BUCKET_NAME=antennabucket
 
 # Pub/Sub things for local development
+CRASHPUBLISH_SERVICE_ACCOUNT_FILE=
 CRASHPUBLISH_PROJECT_ID=local_dev_socorro
 CRASHPUBLISH_TOPIC_NAME=local_dev_socorro_normal
 CRASHPUBLISH_SUBSCRIPTION_NAME=local_dev_socorro_sub
