--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,6 +92,12 @@ jobs:
                 echo "${DOCKER_PASSWORD}" | docker login -u="${DOCKER_USERNAME}" --password-stdin
                 retry docker tag local/antenna_deploy_base "${DOCKER_IMAGE}"
                 retry docker push "${DOCKER_IMAGE}"
+
+                # push `latest` on master only
+                if [ "${CIRCLE_BRANCH}" == "master" ]; then
+                    retry docker tag local/antenna_deploy_base "mozilla/${APP_NAME}:latest"
+                    retry docker push "mozilla/${APP_NAME}:latest"
+                fi
             fi
 
 workflows:
