--- a/setup.cfg
+++ b/setup.cfg
@@ -26,3 +26,9 @@ testpaths = tests/unittest/
 [doc8]
 max-line-length = 88
 ignore-path = docs/_build/
+
+[tool:release]
+github_user = mozilla-services
+github_project = antenna
+bugzilla_product = Socorro
+bugzilla_component = Infra
