bug 1598765: add bin/sqs_cli.py

--- a/docker/config/local_dev.env
+++ b/docker/config/local_dev.env
@@ -32,3 +32,9 @@ CRASHPUBLISH_SUBSCRIPTION_NAME=local_dev_socorro_sub
 
 # Set Pub/Sub library to use emulator
 PUBSUB_EMULATOR_HOST=pubsub:5010
+
+# SQS things for local development
+CRASHPUBLISH_REGION=us-east-1
+CRASHPUBLISH_ACCESS_KEY=foo
+CRASHPUBLISH_SECRET_ACCESS_KEY=foo
+CRASHPUBLISH_ENDPOINT_URL=http://localstack-sqs:4576
