bug 1606763: fix location of Dockerfiles

--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -5,5 +5,5 @@ update_configs:
     update_schedule: "monthly"
 
   - package_manager: "docker"
-    directory: "/"
+    directory: "/docker"
     update_schedule: "monthly"
