--- a/setup.cfg
+++ b/setup.cfg
@@ -32,3 +32,7 @@ github_user = mozilla-services
 github_project = antenna
 bugzilla_product = Socorro
 bugzilla_component = Infra
+
+[tool:paul-mclendahand]
+github_user = mozilla-services
+github_project = antenna
