--- a/docker/config/local_dev.env
+++ b/docker/config/local_dev.env
@@ -15,7 +15,7 @@ STATSD_NAMESPACE=mcboatface
 
 # BreakdpadSubmitterResource settings
 CRASHSTORAGE_CLASS=antenna.ext.s3.crashstorage.S3CrashStorage
-CRASHPUBLISH_CLASS=antenna.ext.pubsub.crashpublish.PubSubCrashPublish
+CRASHPUBLISH_CLASS=antenna.ext.sqs.crashpublish.SQSCrashPublish
 
 # S3CrashStorage and S3Connection settings
 CRASHSTORAGE_ENDPOINT_URL=http://localstack-s3:4572
@@ -24,18 +24,9 @@ CRASHSTORAGE_ACCESS_KEY=foo
 CRASHSTORAGE_SECRET_ACCESS_KEY=foo
 CRASHSTORAGE_BUCKET_NAME=antennabucket
 
-# Pub/Sub things for local development
-CRASHPUBLISH_SERVICE_ACCOUNT_FILE=
-CRASHPUBLISH_PROJECT_ID=local_dev_socorro
-CRASHPUBLISH_TOPIC_NAME=local_dev_socorro_standard
-CRASHPUBLISH_SUBSCRIPTION_NAME=local_dev_socorro_sub
-
-# Set Pub/Sub library to use emulator
-PUBSUB_EMULATOR_HOST=pubsub:5010
-
 # SQS things for local development
+CRASHPUBLISH_ENDPOINT_URL=http://localstack-sqs:4576
 CRASHPUBLISH_REGION=us-east-1
 CRASHPUBLISH_ACCESS_KEY=foo
 CRASHPUBLISH_SECRET_ACCESS_KEY=foo
-CRASHPUBLISH_ENDPOINT_URL=http://localstack-sqs:4576
 CRASHPUBLISH_QUEUE_NAME=local_dev_socorro_standard
