--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,7 @@ github_user = mozilla-services
 github_project = antenna
 bugzilla_product = Socorro
 bugzilla_component = Infra
+main_branch = master
 
 [tool:paul-mclendahand]
 github_user = mozilla-services
