--- a/setup.cfg
+++ b/setup.cfg
@@ -32,8 +32,9 @@ github_user = mozilla-services
 github_project = antenna
 bugzilla_product = Socorro
 bugzilla_component = Infra
-main_branch = master
+main_branch = main
 
 [tool:paul-mclendahand]
 github_user = mozilla-services
 github_project = antenna
+main_branch = main
