bug 1668583: redo test scaffolding
This changes the base image to use an entrypoint which includes running
a shell and moves the previous cmd to docker/run_web.sh.

This redoes how tests work so they run in either a test or a test-ci
container, the latter of which doesn't volume mount . which CircleCI
can't do.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,17 +45,20 @@ jobs:
       - run:
           name: Build Docker image
           working_directory: /antenna
-          command: make build
+          command: |
+            make build
 
       - run:
           name: Lint
           working_directory: /antenna
-          command: docker run local/antenna_deploy_base /bin/bash ./docker/run_lint.sh
+          command: |
+            docker run local/antenna_deploy_base shell ./docker/run_lint.sh
 
       - run:
           name: Run tests
           working_directory: /antenna
-          command: make test
+          command: |
+            make test-ci
 
       - run:
           name: Push to Dockerhub
