--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -23,24 +23,10 @@ COPY . /app/
 # Set Python-related environment variables to reduce annoying-ness
 ENV PYTHONUNBUFFERED 1
 ENV PYTHONDONTWRITEBYTECODE 1
+
 ENV PORT 8000
-ENV GUNICORN_WORKERS 1
-ENV GUNICORN_WORKER_CONNECTIONS 4
-ENV GUNICORN_WORKER_CLASS gevent
-ENV GUNICORN_MAX_REQUESTS 0
-ENV GUNICORN_MAX_REQUESTS_JITTER 0
-ENV CMD_PREFIX ""
 
 USER app
 EXPOSE $PORT
 
-CMD $CMD_PREFIX \
-    gunicorn \
-    --workers=$GUNICORN_WORKERS \
-    --worker-connections=$GUNICORN_WORKER_CONNECTIONS \
-    --worker-class=$GUNICORN_WORKER_CLASS \
-    --max-requests=$GUNICORN_MAX_REQUESTS \
-    --max-requests-jitter=$GUNICORN_MAX_REQUESTS_JITTER \
-    --config=antenna/gunicornhooks.py \
-    --bind 0.0.0.0:$PORT \
-    antenna.wsgi:application
+ENTRYPOINT ["/app/docker/entrypoint.sh"]
