--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,27 +6,28 @@ ARG userid=10001
 
 WORKDIR /app/
 RUN groupadd --gid $groupid app && \
-    useradd -g app --uid $userid --shell /usr/sbin/nologin app
+    useradd -g app --uid $userid --shell /usr/sbin/nologin app && \
+    chown app:app /app/
 
 RUN apt-get update && \
     apt-get install -y gcc apt-transport-https build-essential graphviz
 
-COPY ./requirements /app/requirements
+COPY --chown=app:app requirements.txt /app/
 
 RUN pip install -U 'pip>=10' && \
-    pip install --no-cache-dir -r requirements/default.txt -c requirements/constraints.txt && \
+    pip install --no-cache-dir -r requirements.txt && \
     pip check --disable-pip-version-check
 
+USER app
+
 # Install the app
-COPY . /app/
+COPY --chown=app:app . /app/
 
 # Set Python-related environment variables to reduce annoying-ness
 ENV PYTHONUNBUFFERED 1
 ENV PYTHONDONTWRITEBYTECODE 1
 
 ENV PORT 8000
-
-USER app
 EXPOSE $PORT
 
 ENTRYPOINT ["/app/docker/entrypoint.sh"]
