bug 1689035: move scripts to bin/
There were some scripts in bin/ and some in docker/ and there wasn't
much rhyme or reason for it. This changes things so that all scripts are
in bin/.

I also changed the error options at the top of bash scripts to be safer.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,7 +77,7 @@ jobs:
           name: Lint
           working_directory: /antenna
           command: |
-            docker run local/antenna_deploy_base shell ./docker/run_lint.sh
+            docker run local/antenna_deploy_base shell ./bin/run_lint.sh
 
       - run:
           name: Run tests
