bug 1723964: update everett, redo config, create crashmover
This refactors a lot of connective tissue in Antenna as a result of
updating Everett to 2.0.0 which picks up the new component configuration
code:

* update everett to 2.0.0
* move the crashmoving code out of the breakpad_resource and into a new
  crashmover module; we could use the crashmover for other payload
  types--it's not specific to the breakpad style crash report
* since component configuration namespaces reflect the component
  hierarchy, that caused some namespaces to change, so we had to update
  that
* the docs around configuration were a mess, so I improved those and
  rewrote a lot of bits
* the way logging and metrics were set up was clunky, so I adopted the
  style I used with Eliot so it's easier to follow over interface
  boundaries

--- a/docker/config/local_dev.env
+++ b/docker/config/local_dev.env
@@ -8,25 +8,24 @@ LOCAL_DEV_ENV=True
 # DEBUG is helpful for development, but otherwise we'd use INFO
 LOGGING_LEVEL=DEBUG
 
-# Statsd things
-METRICS_CLASS=antenna.metrics.LoggingMetrics,antenna.metrics.DogStatsdMetrics
+# Statsd settings
 STATSD_HOST=statsd
 STATSD_NAMESPACE=mcboatface
 
-# BreakdpadSubmitterResource settings
-CRASHSTORAGE_CLASS=antenna.ext.s3.crashstorage.S3CrashStorage
-CRASHPUBLISH_CLASS=antenna.ext.sqs.crashpublish.SQSCrashPublish
+# Crashmover settings
+CRASHMOVER_CRASHSTORAGE_CLASS=antenna.ext.s3.crashstorage.S3CrashStorage
+CRASHMOVER_CRASHPUBLISH_CLASS=antenna.ext.sqs.crashpublish.SQSCrashPublish
 
-# S3CrashStorage and S3Connection settings
-CRASHSTORAGE_ENDPOINT_URL=http://localstack-s3:4572
-CRASHSTORAGE_REGION=us-east-1
-CRASHSTORAGE_ACCESS_KEY=foo
-CRASHSTORAGE_SECRET_ACCESS_KEY=foo
-CRASHSTORAGE_BUCKET_NAME=antennabucket
+# S3 settings
+CRASHMOVER_CRASHSTORAGE_ENDPOINT_URL=http://localstack-s3:4572
+CRASHMOVER_CRASHSTORAGE_REGION=us-east-1
+CRASHMOVER_CRASHSTORAGE_ACCESS_KEY=foo
+CRASHMOVER_CRASHSTORAGE_SECRET_ACCESS_KEY=foo
+CRASHMOVER_CRASHSTORAGE_BUCKET_NAME=antennabucket
 
-# SQS things for local development
-CRASHPUBLISH_ENDPOINT_URL=http://localstack-sqs:4576
-CRASHPUBLISH_REGION=us-east-1
-CRASHPUBLISH_ACCESS_KEY=foo
-CRASHPUBLISH_SECRET_ACCESS_KEY=foo
-CRASHPUBLISH_QUEUE_NAME=local_dev_socorro_standard
+# SQS settings
+CRASHMOVER_CRASHPUBLISH_ENDPOINT_URL=http://localstack-sqs:4576
+CRASHMOVER_CRASHPUBLISH_REGION=us-east-1
+CRASHMOVER_CRASHPUBLISH_ACCESS_KEY=foo
+CRASHMOVER_CRASHPUBLISH_SECRET_ACCESS_KEY=foo
+CRASHMOVER_CRASHPUBLISH_QUEUE_NAME=local_dev_socorro_standard
