bug 1671191: drop raven for sentry-sdk
This adds fakesentry infrastructure for CI and local dev giving us a way
to test and debug sentry integration.

This switches from raven to sentry-sdk.

--- a/docker/config/local_dev.env
+++ b/docker/config/local_dev.env
@@ -29,3 +29,6 @@ CRASHMOVER_CRASHPUBLISH_REGION=us-east-1
 CRASHMOVER_CRASHPUBLISH_ACCESS_KEY=foo
 CRASHMOVER_CRASHPUBLISH_SECRET_ACCESS_KEY=foo
 CRASHMOVER_CRASHPUBLISH_QUEUE_NAME=local_dev_socorro_standard
+
+# Set up fakesentry
+SECRET_SENTRY_DSN=http://public@fakesentry:8090/1
