--- a/docker/config/test.env
+++ b/docker/config/test.env
@@ -3,3 +3,6 @@
 # For tests, the default is the no op classes
 CRASHMOVER_CRASHSTORAGE_CLASS=antenna.ext.crashstorage_base.NoOpCrashStorage
 CRASHMOVER_CRASHPUBLISH_CLASS=antenna.ext.crashpublish_base.NoOpCrashPublish
+
+# Set up fakesentry
+SECRET_SENTRY_DSN=http://public@fakesentry:8090/1
