--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+---
 # docker-compose for antenna development.
 #
 # Note: Requires docker 1.10.0+ and docker-compose 1.6.0+.
@@ -31,6 +32,7 @@ services:
       - docker/config/local_dev.env
       - docker/config/test.env
     links:
+      - fakesentry
       - localstack-sqs
       - localstack-s3
       - statsd
@@ -44,6 +46,7 @@ services:
       - docker/config/local_dev.env
       - docker/config/test.env
     links:
+      - fakesentry
       - localstack-sqs
       - localstack-s3
       - statsd
@@ -59,6 +62,7 @@ services:
       - "8000:8000"
     command: web
     links:
+      - fakesentry
       - localstack-s3
       - localstack-sqs
       - statsd
@@ -93,3 +97,13 @@ services:
     image: kamon/grafana_graphite
     ports:
       - "9000:3000"  # grafana port
+
+  # https://github.com/willkg/kent
+  fakesentry:
+    build:
+      context: .
+      dockerfile: ./docker/Dockerfile.fakesentry
+    image: local/antenna_fakesentry
+    ports:
+      - "8090:8090"
+    command: run --host 0.0.0.0 --port 8090
