--- a/requirements.in
+++ b/requirements.in
@@ -9,7 +9,7 @@ gevent==21.12.0
 gunicorn==20.1.0
 isodate==0.6.1
 markus==4.0.0
-raven==6.10.0
+sentry-sdk==1.5.1
 
 # Development requirements
 Sphinx==4.3.2
