--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -14,7 +14,10 @@ RUN apt-get update && \
 
 COPY --chown=app:app requirements.txt /app/
 
-RUN pip install -U 'pip>=10' && \
+# Install Socorro Python requirements using pip < 22 because pip 22
+# doesn't work with pip-tools. (2022-02-01)
+# https://github.com/jazzband/pip-tools/issues/1558
+RUN pip install -U 'pip<22' && \
     pip install --no-cache-dir -r requirements.txt && \
     pip check --disable-pip-version-check
 
