Change pytest to fail on warnings
If something kicks up a warning, we want pytest to treat it as an error
and fail.

This adds an exception for the DeprecatedWarning that Falcon throws when
sentry-sdk FalconIntegration tries to import the api_helpers module
which was renamed in Falcon 3.0.0.

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,9 +19,15 @@ exclude = docs
 max-line-length = 88
 
 [tool:pytest]
-addopts = -rsxX --tb=native
+addopts = -rsxX --tb=native --showlocals
 norecursedirs = .git docs bin
 testpaths = tests/unittest/
+
+filterwarnings =
+    error
+    # sentry-sdk has a Falcon integration that needs some help and is currently
+    # using a thing in Falcon that kicks up a DeprecatedWarning
+    ignore:The api_helpers module.*:falcon.util.deprecation.DeprecatedWarning
 
 [doc8]
 max-line-length = 88
